--- a/MVC/Views/Categories/Index.cshtml
+++ b/MVC/Views/Categories/Index.cshtml
@@ -7,7 +7,7 @@
     var containerDivClass = "container";
 }
 @{
-    ViewData["Title"] = "category List";
+    ViewData["Title"] = "Category List";
 }
 
 <div class="@containerDivClass">
@@ -49,9 +49,6 @@
 				        <tr>
 					        <td>
 						        @Html.DisplayFor(modelItem => item.Name)
-					        </td>
-					        <td>
-						        @Html.DisplayFor(modelItem => item.Description)
 					        </td>
 					        <td class="text-end w-25">
 						        <a asp-action="Details" asp-route-id="@item.Record.id">Details</a>&nbsp;|&nbsp;
