--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -1,8 +1,12 @@
-﻿@{
+﻿@using BLL.Models
+@{
     ViewData["Title"] = "Home Page";
+
+    string title = AppSettings.Title;
+    string desc = AppSettings.Description;
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to @title</h1>
+    <p>@desc</p>
 </div>
